tests/unit/default/syntax-error/153-alter-table.x.t
---- IN ----
*%table|
---- OUT ----
---- ERR ----
syntax: expected <alter-statement-spec> after `*%table` near `|` at position 7 - at line 1
---- EXIT ----
1
